# tetris

./: CMakeLists.txt  Game.pro  README.md  game.rc
.github/workflows/: cmake-build.yml
include/: CMakeLists.txt  about.h  applicationdefs.h  mainwindow.h  options.h  playfield.h  tetrisshape.h
res/: application.rc  resource.qrc
src/: CMakeLists.txt  about.cpp  applicationdefs.cpp.in  mainwindow.cpp  options.cpp  playfield.cpp  tetrisshape.cpp
ui/: CMakeLists.txt  about.ui  mainwindow.ui  options.ui
